--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -61,3 +61,44 @@
 		}
 	}
 }
+
+/*
+	Styles collapsed site list
+*/
+.wpcom-site {
+	.sites-dashboard.preview-hidden {
+		.sites-site-thumbnail {
+			display: flex;
+		}
+		.sites-site-favicon {
+			display: none;
+		}
+	}
+
+	.sites-dashboard:not(.preview-hidden) {
+		.sites-site-favicon {
+			display: flex;
+			margin-right: 0;
+		}
+		.sites-site-thumbnail {
+			display: none;
+		}
+		.list-tile__leading {
+			margin-right: 12px;
+		}
+		.dataviews-filters__view-actions .components-search-control {
+			min-width: initial;
+		}
+		ul.dataviews-view-list {
+			.components-h-stack {
+				gap: 0;
+			}
+			li {
+				border-bottom: 1px solid #f1f1f1 !important;
+			}
+			li.is-selected {
+				background-color: #f7faff;
+			}
+		}
+	}
+}
