--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -25,9 +25,7 @@
 	}
 }
 
-/*
-	Styles for actions (search, filters)
-*/
+// Styles for actions (search, filters)
 .dataviews-filters__view-actions {
 	align-items: center;
 
@@ -43,7 +41,7 @@
 		flex: 1 1 auto;
 		flex-direction: row-reverse;
 		align-items: center;
-		// places search above filters
+		// Places search above filters
 		z-index: 1;
 		border-radius: 2px;
 		border: 1px solid var(--studio-gray-10);
@@ -54,10 +52,61 @@
 			font-size: $font-body;
 		}
 
-		// search icon
+		// Search icon
 		.components-input-control__suffix {
 			padding-inline-start: 11px;
 			color: var(--studio-gray-30);
+		}
+	}
+}
+
+// Styles collapsed site list
+.wpcom-site {
+	.sites-dashboard.preview-hidden {
+		.sites-site-thumbnail {
+			display: flex;
+		}
+
+		.sites-site-favicon {
+			display: none;
+		}
+	}
+
+	.sites-dashboard:not(.preview-hidden) {
+		.sites-site-favicon {
+			display: flex;
+			margin-right: 0;
+		}
+
+		.sites-site-thumbnail {
+			display: none;
+		}
+
+		.list-tile__leading {
+			margin-right: 12px;
+		}
+
+		.dataviews-filters__view-actions {
+			align-items: center;
+			display: flex;
+
+			.components-search-control {
+				min-width: initial;
+			}
+		}
+
+		ul.dataviews-view-list {
+			.components-h-stack {
+				gap: 0;
+			}
+
+			li {
+				border-bottom: 1px solid #f1f1f1 !important;
+			}
+
+			li.is-selected {
+				background-color: #f7faff;
+			}
 		}
 	}
 }
