--- a/packages/calypso-color-schemes/src/shared/color-schemes/_default.scss
+++ b/packages/calypso-color-schemes/src/shared/color-schemes/_default.scss
@@ -255,7 +255,9 @@
 
 	--color-masterbar-background: #101517;
 	--color-masterbar-border: #333;
-	--color-masterbar-text: var(--studio-white);
+	--color-masterbar-text: #f0f0f1; /* Direct from wp-admin */
+	--color-masterbar-icon: rgba(240, 246, 252, 0.6); /* Direct from wp-admin */
+	--color-masterbar-highlight: #72aee6; /* Direct from wp-admin */
 	--color-masterbar-item-hover-background: #333;
 	--color-masterbar-item-active-background: #23282d;
 	--color-masterbar-item-new-editor-background: var(--studio-gray-50);
