adjust slider view

--- a/client/a8c-for-agencies/sections/marketplace/wpcom-overview/wpcom-slider/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/wpcom-overview/wpcom-slider/style.scss
@@ -135,5 +135,6 @@
 	background-color: var(--color-primary-0);
 	position: absolute;
 	top: 22px;
-	border-radius: 4px;
+	left: -1px;
+	border-radius: 4px 0 0 4px;
 }
