--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -46,7 +46,7 @@ $brand-text: "SF Pro Text", $sans;
 		--color-sidebar-menu-selected-text: var(--studio-white);
 		--color-sidebar-menu-hover-text: var(--studio-black);
 		--color-sidebar-menu-hover-background: #eee;
-		--color-sidebar-submenu-background: var(--studio-gray-5);
+		--color-sidebar-submenu-background: var(--studio-white);
 		--color-sidebar-border: var(--studio-gray-5);
 		--color-sidebar-submenu-text: var(--color-sidebar-text);
 		--color-sidebar-submenu-selected-text: var(--color-sidebar-menu-selected-text);
