remove box shadow of promo banner in reader

--- a/client/reader/sidebar/style.scss
+++ b/client/reader/sidebar/style.scss
@@ -128,6 +128,10 @@
 			color: var(--color-link-dark);
 		}
 	}
+
+	.sidebar__app-promo .app-promo-sidebar {
+		box-shadow: none;
+	}
 }
 
 .is-reader-page.theme-default .sidebar .sidebar__menu-link::after {
