Few minor updates

--- a/client/components/navigation-header/style.scss
+++ b/client/components/navigation-header/style.scss
@@ -46,6 +46,7 @@
 	align-items: flex-start;
 	box-sizing: border-box;
 	column-gap: 10px;
+	margin-bottom: 24px;
 
 	> .formatted-header {
 		flex: 1;
