--- a/client/components/section-header/style.scss
+++ b/client/components/section-header/style.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	line-height: 28px;
+	margin-bottom: 24px;
 	padding-top: 11px;
 	padding-bottom: 11px;
 	position: relative;
