add suggested improvements

--- a/client/a8c-for-agencies/components/layout/style.scss
+++ b/client/a8c-for-agencies/components/layout/style.scss
@@ -13,6 +13,7 @@ html,
 	border-radius: 8px; /* stylelint-disable-line scales/radii */
 	overflow: hidden;
 	height: calc(100vh - 32px);
+	padding-block-end: 0;
 
 	header.current-section {
 		margin: 0;
