--- a/client/a8c-for-agencies/sections/marketplace/wpcom-overview/wpcom-slider/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/wpcom-overview/wpcom-slider/style.scss
@@ -115,7 +115,7 @@
 	-moz-appearance: textfield; /* Firefox */
 	appearance: textfield; /* Other browsers */
 	width: 2rem;
-	align-self: center;
+	align-self: baseline;
 	text-align: center;
 	border: 1px solid var(--color-neutral-5);
 	border-radius: 4px;
