--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -35,7 +35,7 @@
 	margin: 0;
 	margin-bottom: 24px;
 	position: relative;
-	background: #FBFBFB; /* stylelint-disable color-hex-case */
+	background: #FAFAFA; /* stylelint-disable color-hex-case */
 
 	@include breakpoint-deprecated( ">660px" ) {
 		border-bottom: 1px solid #e9e9ea;
