--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -31,7 +31,7 @@
 .reader-post-card.card {
 	border-bottom: 5px solid var(--color-neutral-0);
 	border-radius: 6px; /* stylelint-disable-line scales/radii */
-	box-shadow: none;
+	box-shadow: rgba(0, 0, 0, 0.05) 0 0 0 1px inset;
 	margin: 0;
 	margin-bottom: 24px;
 	position: relative;
