Add a little margin

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -522,6 +522,7 @@
 	clear: both;
 	display: flex;
 	flex-direction: column;
+	margin-left: 52px;
 
 	.reader-post-card__post-details {
 		width: 100%;
