--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -1050,37 +1050,91 @@
 	}
 }
 
-.sites-dashboard__empty {
+.sites-dashboard-empty {
 	display: flex;
 	flex-direction: column;
-	gap: 24px;
+	gap: 12px;
 	align-items: center;
 
 	margin: 24px auto;
-	padding: 64px 0;
 	max-width: 700px;
 	text-align: center;
-}
 
-.sites-dashboard__empty-message {
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-}
-
-.sites-dashboard__empty-actions {
-	display: flex;
-	flex-direction: row;
-	gap: 8px;
-
-	margin: 0 auto;
-
-	> .button {
-		display: flex;
-		align-items: center;
-		justify-content: center;
+	@include break-large {
+		align-items: start;
+		text-align: left;
 	}
 }
+
+.sites-dashboard-empty__heading {
+	font-size: rem(24px);
+	font-weight: 600;
+}
+
+.sites-dashboard-empty__subheading {
+	font-size: inherit;
+}
+
+.sites-dashboard-empty__body {
+	margin-block-end: 16px;
+	border-radius: 4px;
+	border: 1px solid var(--color-accent-5);
+	padding: 16px 24px;
+
+	@include break-large {
+		display: flex;
+		gap: 16px;
+	}
+
+	.sites-dashboard-empty__plugins-icon {
+		display: none;
+		opacity: 0.7;
+
+		@include break-large {
+			display: block;
+		}
+	}
+
+	.sites-dashboard-empty__content {
+		text-align: left;
+	}
+
+	.sites-dashboard-empty__content-heading {
+		font-size: rem(16px);
+		font-weight: 500;
+	}
+
+	.sites-dashboard-empty__content-description {
+		margin-block-start: 4px;
+		font-size: rem(14px);
+		line-height: 1.7;
+		color: var(--color-accent);
+	}
+
+	.sites-dashboard-empty__content-button {
+		display: flex;
+		flex-direction: column;
+		gap: 12px;
+
+		margin-block-start: 16px;
+		margin-inline-start: auto;
+
+		@include break-large {
+			flex-direction: row;
+		}
+
+		.button {
+			width: 100%;
+			height: 40px;
+
+			@include break-large {
+				width: auto;
+				height: inherit;
+			}
+		}
+	}
+}
+
 
 /* See wp-calypso/client/layout/style.scss for the original style - this is removed on sites dashboard to enable pagination to display properly. */
 .layout__primary .preview-hidden {
