--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -29,7 +29,7 @@
 }
 
 .reader-post-card.card {
-	border-bottom: 5px solid var(--color-neutral-0);
+	border-bottom: 5px solid var(--color-neutral-5);
 	border-radius: 6px; /* stylelint-disable-line scales/radii */
 	box-shadow: rgba(0, 0, 0, 0.05) 0 0 0 1px inset;
 	margin: 0;
@@ -156,6 +156,10 @@
 		.reader-post-card__post {
 			display: inherit;
 			margin: 0;
+
+			@include breakpoint-deprecated( "<660px" ) {
+				margin: 0 16px;
+			}
 		}
 
 		.reader-post-card__post-heading {
@@ -253,6 +257,10 @@
 			.comments__form {
 				margin-top: 0;
 			}
+
+			@include breakpoint-deprecated( "<660px" ) {
+				margin: 24px 16px 0 16px;
+			}
 		}
 	}
 
@@ -289,6 +297,11 @@
 		border-top: none;
 		margin: 20px 0 0 10px;
 		padding-top: 0;
+
+		@include breakpoint-deprecated( "<660px" ) {
+			margin: 20px 0 0 16px;
+			width: calc(100% - 32px);
+		}
 	}
 }
 
@@ -358,6 +371,10 @@
 .reader-post-card__byline {
 	display: flex;
 	font-size: $font-body-small;
+
+	@include breakpoint-deprecated( "<660px" ) {
+		margin: 0 16px;
+	}
 }
 
 .reader-post-card__author::after {
@@ -531,7 +548,7 @@
 
 @include breakpoint-deprecated( "<660px" ) {
 	.reader-post-card__post {
-		margin-left: 0;
+		margin: 0 16px;
 	}
 }
 
