Only apply negative margin to cards in reader

--- a/client/components/blogging-prompt-card/style.scss
+++ b/client/components/blogging-prompt-card/style.scss
@@ -124,13 +124,13 @@
 			.blogging-prompt__prompt-navigation {
 				gap: 10px;
 			}
-			button.navigation-link {
-				&:first-child {
-					margin-left: -36px;
-				}
-				&:last-child {
-					margin-right: -36px;
-				}
+		}
+		.card:not(.customer-home__card) .blogging-prompt__prompt-container button.navigation-link {
+			&:first-child {
+				margin-left: -36px;
+			}
+			&:last-child {
+				margin-right: -36px;
 			}
 		}
 		.blogging-prompt__prompt-answers .blogging-prompt__prompt-responses-users {
