Add nav redesign frame to Reader Recent and Discover behind flag

--- a/client/reader/components/reader-main/style.scss
+++ b/client/reader/components/reader-main/style.scss
@@ -1,6 +1,6 @@
 body.is-reader-page,
 .is-reader-page .layout {
-	background-color: var(--color-surface);
+	background-color: var(--color-surface); // TODO: Remove after nav-redesign-v2 for reader is done.
 }
 
 .is-reader-page .list-end {
