--- a/client/reader/tags/style.scss
+++ b/client/reader/tags/style.scss
@@ -2,7 +2,7 @@
 @import "@wordpress/base-styles/mixins";
 
 .is-section-reader {
-	background: var(--studio-white);
+	background: var(--studio-white); // TODO: Remove after nav-redesign-v2 for reader is done.
 }
 
 .layout.has-header-section.is-section-reader .layout__header-section-content {
